[package]
name = "ag-grid-core"
version = "0.2.2"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"
description = "Internal core library for ag-grid-rs"
license = "Apache-2.0 OR MIT"

[dependencies]
js-sys = "0.3" 
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Window"
]