[package]
name = "ag-grid-derive"
version = "0.2.1"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"
description = "Internal proc-macro library for ag-grid-rs"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
ag-grid-core = { version = "0.2.1", path = "../ag-grid-core" }
convert_case = "0.6.0"
darling = "0.14.1"
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
