[package]
name = "ag-grid-rs"
version = "0.1.0"  # remember to update ag-grid-derive at the same time
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"
description = "Wasm bindings for AG Grid"
license = "Apache-2.0 OR MIT"

[dependencies]
ag-grid-derive = { version = "0.1.0", path = "../ag-grid-derive" }
js-sys = "0.3" 
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1"
serde_with = "2.0.1"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Window"
]
