[package]
name = "ag-grid-rs"
version = "0.2.1"  # remember to update ag-grid-{derive | core} at the same time
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"
description = "Wasm bindings for AG Grid"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/ag-grid-rs/latest/ag_grid_rs/"
readme = "../README.md"
homepage = "https://github.com/mfreeborn/ag-grid-rs"
repository = "https://github.com/mfreeborn/ag-grid-rs"
keywords = ["wasm", "yew", "datatable", "frontend", "table"]
categories = ["wasm", "web-programming", "api-bindings"]

[dependencies]
ag-grid-core = { version = "0.2.1", path = "../ag-grid-core" }
ag-grid-derive = { version = "0.2.1", path = "../ag-grid-derive" }
js-sys = "0.3" 
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlElement",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"